Fix #10180 - Global Quick Create text alignment issues

--- a/themes/SuiteP/css/suitep-base/forms.scss
+++ b/themes/SuiteP/css/suitep-base/forms.scss
@@ -146,6 +146,11 @@ div.input-group input {
   background-image: none;
 }
 
+.dropdown-toggle > span {
+  position: relative;
+  top: 8%;
+}
+
 .button-primary.disabled {
   background-color: $disabled-btn-color;
   border-color: $disabled-btn-color;
